<resources>

    <string name="app_name">MyNeighborhoodV2</string>

    <string name="already_registered"><u>Log in</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_hope_page">HopePageActivity</string>
    <string name="title_home">Home</string>
    <string name="next">Next</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_password">Email and Password</string>
    <string name="email">Email address</string>
    <string name="terms_and_conditions">By clicking ‘Next’, you agree to our terms and conditions and privacy policy.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="details">Tell us a bit about yourself</string>
    <string name="home">Home</string>
    <string name="marketplace">Marketplace</string>
    <string name="lend">Lend</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

    <string name="g_orders">Orders</string>
    <string name="g_order">Order</string>
    <string name="g_all_orders">All Orders</string>
    <string name="g__track_order">Track Order</string>

    <string name="g_notifications">Notifications</string>
    <string name="g_regional">Regional</string>
    <string name="g_language">Language</string>
    <string name="g_logout">Logout</string>
    <string name="g_billing">Billing And Addresses</string>
    <string name="g_version">Version</string>
    <string name="error_occurred">Oops error occurred</string>
    <string name="g_edit_profile">Edit Profile</string>
    <string name="g_change_forgot_password">Forgot/Change password</string>
    <string name="g_cant_change_email_message">You cannot change your email address, if you are looking to change it please contact with us</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="g_no_orders_to_show">No orders to show</string>
    <string name="g_reset_password">Reset Password</string>
    <string name="g_reset_password_message">We will send you password reset link on your Email</string>
    <string name="g_send">Send</string>
    <string name="g_password_reset">We sent reset password link to your email</string>
    <string name="g_order_placed">Order Placed</string>
    <string name="g_shipped">Shipped</string>
    <string name="g_delivered">Delivered</string>
    <string name="g_products">Products</string>
    <string name="g_coming_soon">This feature is not available yet</string>
    <string name="g_english">English</string>
    <string name="g_arabic">عربي</string>
    <string name="g_forgot_password">Forgot Password</string>
    <string name="g_check_your_email">Check your Email</string>
    <string name="street">Street</string>
    <string name="g_order_details">Order Details</string>
    <string name="product_added">Product added to your cart</string>
    <string name="switch_account">Switch Account</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="my_store">My Store</string>
    <string name="g_total_sales">Total Sales</string>
    <string name="today_sales">Today Sales</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="help">Help</string>
    <string name="help_text">Got a question? We\'re here to answer!</string>

    <string-array name="Neighborhoods">
        <item>Hostel 1</item>
        <item>Hostel 2</item>
        <item>Hostel 3</item>
        <item>Hostel 4</item>
        <item>Hostel 5</item>
        <item>Hostel 6</item>
    </string-array>


</resources>

