<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="20dp"
        android:layout_height="24dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_button"

        />

    <TextView
        android:id="@+id/textEmailandPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_password"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/h3Bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="26dp"

        />
    
    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/textEmailandPwd"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/h2Bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="26dp"

        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        style="@style/editText"
        android:autofillHints="" />


    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/h2Bold"
        android:layout_marginTop="28dp"
        android:layout_marginStart="26dp"

        />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        style="@style/editText"
        />

    <TextView
        android:id="@+id/textConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/h2Bold"
        android:layout_marginTop="28dp"
        android:layout_marginStart="26dp"

        />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/textConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/textConfirmPassword"
        style="@style/editText"
        tools:ignore="ExtraText" />

    <TextView
        android:id="@+id/textTermsAndConditions"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        app:layout_constraintStart_toStartOf="@id/editConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/editConfirmPassword"
        style="@style/h1Bold"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/dots"
        android:layout_width="66dp"
        android:layout_height="12dp"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/dots_three"
        android:layout_marginBottom="20dp"
        />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/nextButton"
        android:layout_width="@dimen/longButtonWidth"
        android:layout_height="@dimen/longButtonHeight"
        style="@style/teal200ButtonStyle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:paddingTop="10dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>