<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/myNeighborhoodTextLogo"
        android:layout_width="284dp"
        android:layout_height="69dp"
        android:src="@drawable/my_neighborhood_text_logo"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email address"
        android:layout_marginBottom="4dp"
        style="@style/h2Bold"
        app:layout_constraintTop_toBottomOf="@id/myNeighborhoodTextLogo"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintBottom_toBottomOf="@id/editEmail"
        
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="500dp"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        style="@style/editText"
        />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginBottom="6dp"
        style="@style/h2Bold"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintBottom_toBottomOf="@id/editPassword"
        />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="400dp"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        style="@style/editText"
        android:autofillHints="Password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/forgot_password"
        android:layout_marginStart="3dp"
        app:layout_constraintEnd_toEndOf="@id/editPassword"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        style="@style/h2Bold"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="@dimen/longButtonWidth"
        android:layout_height="@dimen/longButtonHeight"
        style="@style/teal200ButtonStyle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login"
        android:textAlignment="center"
        android:layout_marginBottom="90dp"
        android:paddingTop="10dp"
        />
    <TextView
        android:id="@+id/textCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        android:text="@string/don_t_have_an_account"
        style="@style/h1"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/create_account"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/textCreateAccount"
        app:layout_constraintBottom_toBottomOf="@id/textCreateAccount"
        style="@style/h1Bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>